--- a/packages/themes/src/classic/variables.scss
+++ b/packages/themes/src/classic/variables.scss
@@ -32,6 +32,9 @@
     --baklava-color-connection-default: white;
     --baklava-color-connection-allowed: green;
     --baklava-color-connection-forbidden: red;
+    --baklava-color-connection-hovered: #4CAF50;
+    --baklava-color-connection-clicked: #2196F3;
+    --baklava-color-connection-selected: #FF9800;
 
     // Background pattern
     --baklava-editor-background-pattern-default: #232323;
