--- a/packages/themes/src/syrup-dark/variables.scss
+++ b/packages/themes/src/syrup-dark/variables.scss
@@ -32,6 +32,9 @@
     --baklava-color-connection-default: #737f96;
     --baklava-color-connection-allowed: #48bc79;
     --baklava-color-connection-forbidden: #bc4848;
+    --baklava-color-connection-hovered: #4CAF50;
+    --baklava-color-connection-clicked: #2196F3;
+    --baklava-color-connection-selected: #FF9800;
 
     // Background pattern
     --baklava-editor-background-pattern-default: #202b3c;
