--- a/packages/themes/src/classic/components/minimap.scss
+++ b/packages/themes/src/classic/components/minimap.scss
@@ -4,7 +4,7 @@
     width: 15%;
     min-width: 150px;
     max-width: 90%;
-    top: 20px;
+    bottom: 20px;
     right: 20px;
     z-index: 900;
 }
